--- a/ui/style.css
+++ b/ui/style.css
@@ -1,31 +1,35 @@
 html, body {
 	margin: 0px;
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
 	font-family: Cabin, sans-serif;
 }
-canvas#c {
+.content {
+	width: 70%;
+	margin: 20px auto;
+}
+
+.sim {
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+}
+.sim .canvas {
 	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100vw;
-	height: 100vh;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 	z-index: 2;
 }
-canvas#graph {
+.sim .spread_graph {
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
-	width: 300px;
 	height: 200px;
+	width: 300px;
 	z-index: 1;
 }
-div#count {
+.sim .infection_count {
 	position: absolute;
-	/*bottom: 0px;
-	left: 50%;
-	transform: translateX(-50%);*/
 	bottom: 200px;
 	left: 0;
 	width: 300px;
@@ -33,7 +37,7 @@ div#count {
 	z-index: 1;
 	font-family: 'DM Mono', monospace;
 }
-div#controls {
+.sim .controls {
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -43,7 +47,7 @@ div#controls {
 	border-bottom-right-radius: 5px;
 	overflow: hidden; /* TODO */
 }
-div#controls div {
+.sim .controls div {
 	width: 50px;
 	height: 50px;
 	line-height: 50px;
@@ -53,11 +57,17 @@ div#controls div {
 	display: inline-block;
 	background: #626262;
 }
-div#controls div:hover,
-div#controls div[data-selected] {
+.sim .controls div:hover,
+.sim .controls div[data-selected] {
 	background: #535353;
 }
-#overlay {
+.sim .r0 {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+
+.overlay {
 	z-index: 10;
 	position: absolute;
 	top: 0px;
@@ -66,7 +76,7 @@ div#controls div[data-selected] {
 	height: 100%;
 	background: rgba(0, 0, 0, 0.2);
 }
-#modal {
+.modal {
 	background: #fff;
 	border-radius: 2px;
 	padding: 25px 40px;
@@ -78,18 +88,18 @@ div#controls div[data-selected] {
 	text-align: center;
 	font-size: 20px;
 }
-#modal input {
+.modal input {
 	outline: 0;
 	padding: 2px;
 	margin: 0 0 0 8px;
 	border: none;
 	border-bottom: 2px solid #333;
 }
-#modal .wrapper {
+.modal .wrapper {
 	text-align: center;
 	margin-top: 10px;
 }
-#modal #submit {
+.modal .submit {
 	background: #ccc;
 	display: inline-block;
 	text-align: center;
@@ -97,6 +107,6 @@ div#controls div[data-selected] {
 	border-radius: 2px;
 	cursor: pointer;
 }
-#modal #submit:hover {
+.modal .submit:hover {
 	background: #bbb;
 }
