--- a/ui/style.css
+++ b/ui/style.css
@@ -3,14 +3,21 @@ html, body {
 	font-family: Cabin, sans-serif;
 }
 .content {
-	width: 70%;
+	width: 50%;
 	margin: 20px auto;
+}
+.content > p {
+	width: 80%;
+	margin: 20px auto;
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .sim {
 	width: 100%;
 	position: relative;
-	overflow: hidden;
+	/*overflow: hidden;*/
+	margin: 70px 0 40px;
 }
 .sim .canvas {
 	position: absolute;
@@ -41,10 +48,13 @@ html, body {
 	position: absolute;
 	top: 0px;
 	left: 0px;
+	transform: translateY(-100%);
 	z-index: 3;
 	background: #626262;
 	color: #fff;
-	border-bottom-right-radius: 5px;
+	/*border-bottom-right-radius: 5px;*/
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 	overflow: hidden; /* TODO */
 }
 .sim .controls div {
@@ -66,6 +76,12 @@ html, body {
 	bottom: 0;
 	right: 0;
 }
+/*.sim .ghost_wall {
+	position: absolute;
+	height: 100%;
+	border: 2px solid #000;
+	box-sizing: border-box;
+}*/
 
 .overlay {
 	z-index: 10;
