--- a/ui/style.css
+++ b/ui/style.css
@@ -78,7 +78,7 @@ html, body {
 
 .overlay {
 	z-index: 10;
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
@@ -89,7 +89,7 @@ html, body {
 	background: #fff;
 	border-radius: 2px;
 	padding: 25px 40px;
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
