--- a/ui/style.css
+++ b/ui/style.css
@@ -12,6 +12,9 @@ html, body {
 	font-size: 20px;
 	font-family: 'Open Sans', sans-serif;
 }
+.content > p .fas {
+	color: #8ee9ff; /*rgb(163, 163, 163);*/
+}
 
 .sim {
 	width: 100%;
@@ -26,6 +29,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	z-index: 2;
+	border: 1px dashed #ccc;
 }
 .sim .spread_graph {
 	position: absolute;
@@ -34,6 +38,19 @@ html, body {
 	height: 200px;
 	width: 300px;
 	z-index: 1;
+}
+.sim .re_graph {
+	position: absolute;
+	bottom: -100px;
+	right: -100px;
+	height: 300px;
+	width: 400px;
+	z-index: 1;
+}
+.sim .r0 {
+	position: absolute;
+	bottom: 200px;
+	right: 0;
 }
 .sim .infection_count {
 	position: absolute;
@@ -46,7 +63,7 @@ html, body {
 }
 .sim .controls {
 	position: absolute;
-	top: 0px;
+	top: 1px;
 	left: 0px;
 	transform: translateY(-100%);
 	z-index: 3;
@@ -70,10 +87,10 @@ html, body {
 .sim .controls div[data-selected] {
 	background: #535353;
 }
-.sim .r0 {
+.sim > .dg.main {
 	position: absolute;
-	bottom: 0;
-	right: 0;
+	top: 0;
+	right: -247px;
 }
 
 .overlay {
