--- a/ui/style.css
+++ b/ui/style.css
@@ -6,14 +6,35 @@ html, body {
 	width: 50%;
 	margin: 20px auto;
 }
-.content > p {
+.content .text p,
+.content .text .il {
 	width: 80%;
 	margin: 20px auto;
 	font-size: 20px;
 	font-family: 'Open Sans', sans-serif;
 }
-.content > p .fas {
-	color: #8ee9ff; /*rgb(163, 163, 163);*/
+.content .text .fas {
+	color: #50a2fa; /*rgb(163, 163, 163);*/
+}
+.content .text .il {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+.content .text .il > div {
+	margin-top: 1px;
+	margin-left: 10px;
+	width: 25px;
+	text-align: center;
+	display: inline-block;
+}
+.content .text .il > p {
+	margin: 0px;
+	width: 100%;
+	margin-left: 15px;
+	box-sizing: border-box;
 }
 
 .sim {
